--- a/css/style.css
+++ b/css/style.css
@@ -1942,40 +1942,33 @@ form button:hover::after {
   gap: 10vh;
   z-index: 10;
 }
-#projects .projects .all-projects[data-scroll] {
-  transition: 1.5s;
-  transform: scale(1);
-}
-#projects .projects .all-projects .project-item {
+#projects .projects .project-item {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column-reverse;
-  border: 1px solid #29323d;
-  outline: none;
+  border: 2px solid #29323d;
   border-radius: 0.5rem;
-  overflow: hidden;
   box-shadow: 0rem 0.5rem 0.5rem rgba(72, 85, 99, 0.15);
   transition: box-shadow 0.5s ease;
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item {
+  #projects .projects .project-item {
     height: 350px;
     width: 100%;
     flex-direction: row;
     position: relative;
   }
-  #projects .projects .all-projects .project-item:nth-child(even) {
+  #projects .projects .project-item:nth-child(even) {
     flex-direction: row-reverse;
   }
 }
-#projects .projects .all-projects .project-item .project-tile {
-  padding: 1.5rem 1rem;
+#projects .projects .project-item .project-tile {
+  padding: 1.5rem 1rem 1rem;
   flex-basis: 50%;
   width: 100%;
   height: 100%;
-  line-height: 1.2em;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -1983,64 +1976,45 @@ form button:hover::after {
   background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile {
-    padding: 2em;
+  #projects .projects .project-item .project-tile {
+    padding: 2rem;
   }
 }
-#projects .projects .all-projects .project-item .project-tile h3 {
-  font-size: 1.15rem;
+#projects .projects .project-item .project-tile h3 {
   width: 100%;
-  color: #f4f4f4;
-  font-weight: 500;
+  font-size: 1.15rem;
+  font-size: clamp(1.125rem, 3vw, 1.5rem);
+  font-weight: 600;
   text-transform: capitalize;
-  line-height: 1em;
-  letter-spacing: 0.05rem;
+  color: #f4f4f4;
   margin-bottom: 1rem;
   padding-bottom: 0.5rem;
-  border-bottom: 1px dashed #f4f4f4;
+  border-bottom: 1px dashed #b3c0cc;
 }
-@media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h3 {
-    font-size: 1.5rem;
-  }
-}
-#projects .projects .all-projects .project-item .project-tile h4 {
+#projects .projects .project-item .project-tile h4 {
   font-size: 1rem;
-  line-height: 1.5;
+  font-size: clamp(1rem, 2vw, 1.125rem);
   font-weight: 500;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 1rem;
   text-transform: capitalize;
   color: #b3c0cc;
-  transition: 0.3s;
 }
-@media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h4 {
-    font-size: 1.25rem;
-  }
-}
-#projects .projects .all-projects .project-item .project-tile p {
+#projects .projects .project-item .project-tile p {
   font-size: 0.9rem;
+  font-size: clamp(.975rem, 1.5vw, 1.05rem);
   font-weight: 400;
   color: #ffff;
-  margin: 0.5rem 0;
+  margin: 0 0 0.5rem;
 }
-@media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile p {
-    font-size: 1rem;
-  }
-}
-#projects .projects .all-projects .project-item .project-tile .project-info {
+#projects .projects .project-item .project-tile .project-info {
   color: #fff;
   background: #1f252d;
-  margin: 0.5em 0 0.5em;
-  padding: 0.5em;
+  padding: 0.5rem;
   width: 100%;
-  border: none;
-  outline: none;
   border-radius: 0.5rem;
-  transition: all 0.3s ease;
+  transition: all 250ms ease;
 }
-#projects .projects .all-projects .project-item .project-tile .project-info a {
+#projects .projects .project-item .project-tile .project-info a {
   font-size: 0.85rem;
   padding: 0.75rem;
   margin: 1rem 0;
@@ -2051,65 +2025,47 @@ form button:hover::after {
   position: relative;
   isolation: isolate;
 }
-#projects .projects .all-projects .project-item .project-tile .project-info a i {
+#projects .projects .project-item .project-tile .project-info a i {
   font-size: 0.85rem;
   transition: 0.25s;
   opacity: 0.6;
 }
-#projects .projects .all-projects .project-item .project-tile .project-info a .icon {
+#projects .projects .project-item .project-tile .project-info a .icon {
   opacity: 0.6;
 }
-#projects .projects .all-projects .project-item .project-img {
+#projects .projects .project-item .project-img {
   flex-basis: 50%;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
-  isolation: isolate;
   overflow: hidden;
-  border: none;
-  outline: none;
-  transform: scale(1.05);
+  isolation: isolate;
 }
-#projects .projects .all-projects .project-item .project-img::after {
+#projects .projects .project-item .project-img::after {
   content: "";
   position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
+  inset: 0;
+  border-radius: inherit;
   background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-  opacity: 0.6;
-  transition: 0.5s;
-  z-index: 3;
+  opacity: 0.1;
+  transition: 500ms;
+  z-index: 1;
 }
-#projects .projects .all-projects .project-item .project-img img {
+#projects .projects .project-item .project-img img {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  transition: 0.5s ease;
+  transition: 500ms ease;
   z-index: 1;
-  overflow: hidden;
 }
-#projects .projects .all-projects .project-item .project-img:hover {
-  transition: 0.5s ease;
-}
-#projects .projects .all-projects .project-item .project-img:hover::after {
-  opacity: 0;
-}
-@media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-img {
-    height: 100%;
-  }
-}
-#projects .projects .all-projects .project-item .tech-list {
+#projects .projects .project-item .tech-list {
   padding: 0.5em;
 }
-#projects .projects .all-projects .project-item .tech-list ul {
+#projects .projects .project-item .tech-list ul {
   display: flex;
   flex-wrap: wrap;
 }
-#projects .projects .all-projects .project-item .tech-list ul li {
+#projects .projects .project-item .tech-list ul li {
   font-size: 0.8em;
   color: #b3c0cc;
   list-style: none;
@@ -2118,19 +2074,19 @@ form button:hover::after {
   font-style: italic;
   letter-spacing: 0.05em;
 }
-#projects .projects .all-projects .project-item:hover.project-item {
-  box-shadow: 0.2rem 0.25rem 0.5rem rgba(72, 85, 99, 0.35);
+#projects .projects .project-item:hover.project-item {
+  box-shadow: 0rem 0.25rem 0.5rem rgba(72, 85, 99, 0.45);
 }
-#projects .projects .all-projects .project-item:hover.project-item::after {
+#projects .projects .project-item:hover.project-item::after {
   opacity: 1;
 }
-#projects .projects .all-projects .project-item:hover.project-item .project-img img {
-  transform: scale(1.1);
+#projects .projects .project-item:hover.project-item .project-img img {
+  transform: scale(1.05);
 }
-#projects .projects .all-projects .project-item:hover.project-item .project-img::after {
-  opacity: 0.7;
+#projects .projects .project-item:hover.project-item .project-img::after {
+  opacity: 0.4;
 }
-#projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a i, #projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a .icon {
+#projects .projects .project-item:hover.project-item .project-tile .project-info a i, #projects .projects .project-item:hover.project-item .project-tile .project-info a .icon {
   opacity: 1;
   transform: translate(0) scale(1);
 }
