--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -15,249 +15,215 @@
         
         // project items
         .all-projects {
-            // border: 2px solid blue;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
             gap: 10vh;
             z-index: 10;
-            // DATA-SCROLL
-            &[data-scroll] {
-                transition: 1.5s;
-                transform: scale(1);
-            }
-            // project item
-            .project-item {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column-reverse;
-                border: 1px solid abstracts.$overlay-blue-dark;
-                outline: none;
-                border-radius: .5rem;
-                overflow: hidden;
-                box-shadow: 0rem .5rem .5rem rgba(72, 85, 99, .15);
-                transition: box-shadow .5s ease;
-                
-                // project items on desktop : row
-                @media (min-width: 768px) {
-                    height: 350px;
-                    width: 100%;
-                    flex-direction: row;
-                    position: relative;
+        }
 
-                    &:nth-child(even) {
-                        flex-direction: row-reverse;
-                    }
+        // PROJECT ITEM 
+        .project-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column-reverse;
+            border: 2px solid abstracts.$overlay-blue-dark;
+            border-radius: .5rem;
+            // overflow: hidden;
+            box-shadow: 0rem .5rem .5rem rgba(72, 85, 99, .15);
+            transition: box-shadow .5s ease;
+            overflow: hidden;
+            
+            // project items on desktop : row
+            @media (min-width: 768px) {
+                height: 350px;
+                width: 100%;
+                flex-direction: row;
+                position: relative;
+
+                &:nth-child(even) {
+                    flex-direction: row-reverse;
                 }
-                overflow: hidden;
-                // project tile
-                .project-tile {
-                    // border: 3px solid abstracts.$span-gold;
-                    @media (min-width: 768px){
-                        // flex-basis: 50%;
-                        padding: 2em;
-                    }
+            }
 
-                    padding: 1.5rem 1rem;
-                    flex-basis: 50%;
+            // PROJECT TILE
+            .project-tile {
+
+                padding: 1.5rem 1rem 1rem;
+                flex-basis: 50%;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: flex-start;
+                justify-content: center;
+                flex-direction: column;
+                background: abstracts.$overlay-dark;
+                // border: 4px solid red;
+
+                @include abstracts.md {
+                    padding: 2rem;
+                }
+
+                // PROJECT TITLE (H3)
+                h3 {
                     width: 100%;
-                    height: 100%;
-                    line-height: 1.2em;
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    // background-color: abstracts.$overlay-blue-dark;
-                    background: abstracts.$overlay-dark;
-                    // project Title (h1)
-                    h3 {
-                        font-size: 1.15rem;
-                        width: 100%;
-                        color: abstracts.$text-light;
-                        @media (min-width: 768px){
-                            font-size: 1.5rem;
-                        }
+
+                    font-size: 1.15rem;
+                    font-size: clamp(1.125rem, 3vw, 1.5rem);
+                    font-weight: 600;
+                    
+                    text-transform: capitalize;
+                    color: abstracts.$text-light;
+                    
+                    margin-bottom: 1rem;
+                    padding-bottom: 0.5rem;
+                    border-bottom: 1px dashed abstracts.$brand;
+                    
+                }
+
+                // project details (h2 and p)
+                h4 {
+                    font-size: 1rem;
+                    font-size: abstracts.$font-clamp-sm;
+                    font-weight: 500;
+                    margin: 0.5rem 0 1rem;
+                    text-transform: capitalize;
+                    color: abstracts.$brand;
+                }
+                
+                p {
+                    font-size: .9rem;
+                    font-size: abstracts.$font-clamp-xsm;
+                    font-weight: 400;
+                    color: #ffff;
+                    margin: 0 0 0.5rem;
+                }
+                // end of project details (h2 and p)
+                // project link icon
+                
+                .project-info {
+                    // border: 2px solid yellow;
+                    color: abstracts.$text-white;
+                    background: abstracts.$overlay-blue-darker;
+                    
+                    padding: 0.5rem;
+                    width: 100%;
+                    border-radius: 0.5rem;
+                    transition: all 250ms ease;
+
+                    // PROJECT LINK
+                    a {
+                        font-size: 0.85rem;
+                        padding: 0.75rem;
+                        margin: 1rem 0;
+                        border-radius: 0.5rem;
                         font-weight: 500;
                         text-transform: capitalize;
-                        line-height: 1em;
-                        // font-family: abstracts.$font-title;
-                        letter-spacing: .05rem;
-                        margin-bottom: 1rem;
-                        padding-bottom: .5rem;
-                        border-bottom: 1px dashed #f4f4f4;
+                        color: abstracts.$text-light;
+                        position: relative;
+                        isolation: isolate;
+                        i {
+                            font-size: 0.85rem;
+                            transition: 0.25s;
+                            opacity: 0.6;
+                        }
+                        .icon {
+                            opacity: 0.6;
+                        }
+                    }
+
+                }
+
+            }
+            // end of project tile 
+            // project image
+            .project-img {
+                // border: 4px solid green;
+                flex-basis: 50%;
+                width: 100%;
+                height: 100%;
+                position: relative;
+                overflow: hidden;
+                isolation: isolate;
+
+                // IMAGE OVERLAY
+                &::after {
+                    content: "";
+                    position: absolute;
+                    inset: 0;
+                    border-radius: inherit;
+                    background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
+                    opacity: 0.1;
+                    transition: 500ms;
+                    z-index: 1;
+                }
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    transition: 500ms ease;
+                    z-index: 1;
+                }
+            }
+
+            // project tech list
+            .tech-list {
+                padding: .5em;
+
+                ul {
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    li {
+                        font-size: .8em;
+                        color: abstracts.$brand;
+                        list-style: none;
+                        padding: .4em .3em;
+                        margin-right: .1em;
+                        font-style: italic;
+                        letter-spacing: .05em;
+                    }
+                }
+
+            }
+
+
+            // project item img hover state
+            &:hover {
+                &.project-item {
+                    box-shadow: 0rem .25rem .5rem rgba(72, 85, 99, .45);
+
+                    &::after {
+                        opacity: 1;
+                    }
+
+                    .project-img {
+                        img {
+                            transform: scale(1.05);
+                        }
+
+                        &::after {
+                            opacity: .4;
+                        }
                         
                     }
-                    // end of project Title (h1)
-                    // project details (h2 and p)
-                    h4 {
-                        font-size: 1rem;
-                        line-height: 1.5;
-                        font-weight: 500;
-                        margin: .5rem 0;
-                        text-transform: capitalize;
-                        color: abstracts.$brand;
-                        transition: .3s;
-                        @media (min-width:768px){
-                            font-size: 1.25rem;
-                        }
-                    }
-                    
-                    p {
-                        font-size: .9rem;
-                        @media (min-width:768px){
-                            font-size: 1rem;
-                        }
-                        font-weight: 400;
-                        color: #ffff;
-                        margin: .5rem 0;
-                    }
-                    // end of project details (h2 and p)
-                    // project link icon
-                    
-                    .project-info {
-                        color: abstracts.$text-white;
-                        background: abstracts.$overlay-blue-darker;
-                        margin: .5em 0 .5em;
-                        padding: .5em;
-                        width: 100%;
-                        border: none;
-                        outline: none;
-                        border-radius: .5rem;
-                        transition: all .3s ease;
-                        // border: 2px solid red;
-                        // PROJECT LINK
-                        a {
-                            font-size: 0.85rem;
-                            padding: 0.75rem;
-                            margin: 1rem 0;
-                            border-radius: 0.5rem;
-                            font-weight: 500;
-                            text-transform: capitalize;
-                            color: abstracts.$text-light;
-                            position: relative;
-                            isolation: isolate;
-                            i {
-                                font-size: 0.85rem;
-                                transition: 0.25s;
-                                opacity: 0.6;
-                            }
-                            .icon {
-                                opacity: 0.6;
-                            }
-                        }
 
-                    }
-                    // end of project link icon 
-                }
-                // end of project tile 
-                // project image
-                .project-img {
-                    flex-basis: 50%;
-                    width: 100%;
-                    height: 100%;
-                    overflow: hidden;
-                    position: relative;
-                    isolation: isolate;
-                    overflow: hidden;
-                    border: none;
-                    outline: none;
-                    transform: scale(1.05);
-                    // project image box shadow
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                        height: 100%;
-                        width: 100%;
-                        background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-                        opacity: .6;
-                        transition: .5s;
-                        z-index: 3;
-                    }
-                    // end of project image box shadow
-                    // image 
-                    img {
-                        height: 100%;
-                        width: 100%;
-                        object-fit: cover;
-                        transition: 0.5s ease;
-                        z-index: 1;
-                        overflow: hidden;
-
-
-                    }
-                    // end of image
-                    &:hover {
-                        &::after {
-                            opacity: 0;
-                        }
-                        transition: 0.5s ease;
-                    }
-                    @media (min-width: 768px){
-                        height: 100%;
-                    }
-                }
-                // end of project image
-                // project tech list
-                .tech-list {
-                    padding: .5em;
-
-                    ul {
-                        display: flex;
-                        flex-wrap: wrap;
-
-                        li {
-                            font-size: .8em;
-                            color: abstracts.$brand;
-                            list-style: none;
-                            padding: .4em .3em;
-                            margin-right: .1em;
-                            font-style: italic;
-                            letter-spacing: .05em;
-                        }
-                    }
-
-                }
-                // end of project tech list
-                // project item img hover state
-                &:hover {
-                    &.project-item {
-                        box-shadow: .2rem .25rem .5rem rgba(72, 85, 99, .35);
-
-                        &::after {
-                            opacity: 1;
-                        }
-
-                        .project-img {
-                            img {
-                                transform: scale(1.1);
-                            }
-
-                            &::after {
-                                opacity: .7;
-                            }
-                            
-                        }
-
-                        .project-tile {
-                            .project-info {
-                                a {
-                                    i, .icon {
-                                        opacity: 1;
-                                        transform: translate(0) scale(1);
-                                    }
+                    .project-tile {
+                        .project-info {
+                            a {
+                                i, .icon {
+                                    opacity: 1;
+                                    transform: translate(0) scale(1);
                                 }
                             }
                         }
                     }
                 }
-                // end of project item img hover state 
             }
-            
-            // end of project item
+            // end of project item img hover state 
         }
         // end of project items
     }
